--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<HTML xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,4 +7,4 @@
 <body>
 <p th:text="'안녕! ' + ${data}" >안녕하세요. 손님</p>
 </body>
-</HTML>
+</html>
